Backend/ProgramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\Program.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Backend {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class ProgramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, InlineLabel=19, Type=20, UnaryOp=21, BinaryOp=22, Num=23, Id=24, 
		Whitespace=25, Newline=26;
	public const int
		RULE_program = 0, RULE_funcDefs = 1, RULE_decls = 2, RULE_label = 3, RULE_stmt = 4, 
		RULE_decl = 5, RULE_funcDecl = 6, RULE_globalVariableDecl = 7, RULE_variableDecl = 8, 
		RULE_funcTail = 9, RULE_funcHead = 10, RULE_funcDef = 11, RULE_quaternary = 12, 
		RULE_operand = 13, RULE_unary = 14, RULE_binary = 15, RULE_return = 16, 
		RULE_jumpEqual = 17, RULE_jump = 18, RULE_param = 19, RULE_call = 20, 
		RULE_end = 21, RULE_variable = 22;
	public static readonly string[] ruleNames = {
		"program", "funcDefs", "decls", "label", "stmt", "decl", "funcDecl", "globalVariableDecl", 
		"variableDecl", "funcTail", "funcHead", "funcDef", "quaternary", "operand", 
		"unary", "binary", "return", "jumpEqual", "jump", "param", "call", "end", 
		"variable"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "'func_decl'", "';'", "'global'", "'decl_var'", "'decl_arr'", 
		"'param_decl'", "'end_func'", "'func'", "'return'", "'Je'", "'J'", "'param'", 
		"'call'", "'end'", "'@'", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "InlineLabel", "Type", "UnaryOp", 
		"BinaryOp", "Num", "Id", "Whitespace", "Newline"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Program.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ProgramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ProgramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ProgramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclsContext decls() {
			return GetRuleContext<DeclsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallContext call() {
			return GetRuleContext<CallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDefsContext funcDefs() {
			return GetRuleContext<FuncDefsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclContext[] funcDecl() {
			return GetRuleContexts<FuncDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDeclContext funcDecl(int i) {
			return GetRuleContext<FuncDeclContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 46;
				funcDecl();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 );
			State = 51;
			decls();
			State = 52;
			call();
			State = 53;
			end();
			State = 54;
			funcDefs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncDefContext[] funcDef() {
			return GetRuleContexts<FuncDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDefContext funcDef(int i) {
			return GetRuleContext<FuncDefContext>(i);
		}
		public FuncDefsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDefs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterFuncDefs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitFuncDefs(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefsContext funcDefs() {
		FuncDefsContext _localctx = new FuncDefsContext(Context, State);
		EnterRule(_localctx, 2, RULE_funcDefs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 56;
				funcDef();
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__8 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext[] decl() {
			return GetRuleContexts<DeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext decl(int i) {
			return GetRuleContext<DeclContext>(i);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decls; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterDecls(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitDecls(this);
		}
	}

	[RuleVersion(0)]
	public DeclsContext decls() {
		DeclsContext _localctx = new DeclsContext(Context, State);
		EnterRule(_localctx, 4, RULE_decls);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) {
				{
				{
				State = 61;
				decl();
				}
				}
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode InlineLabel() { return GetToken(ProgramParser.InlineLabel, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 6, RULE_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(InlineLabel);
			State = 68;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QuaternaryContext quaternary() {
			return GetRuleContext<QuaternaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_stmt);
		int _la;
		try {
			State = 75;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==InlineLabel) {
					{
					State = 70;
					label();
					}
				}

				State = 73;
				quaternary();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74;
				label();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclContext variableDecl() {
			return GetRuleContext<VariableDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalVariableDeclContext globalVariableDecl() {
			return GetRuleContext<GlobalVariableDeclContext>(0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitDecl(this);
		}
	}

	[RuleVersion(0)]
	public DeclContext decl() {
		DeclContext _localctx = new DeclContext(Context, State);
		EnterRule(_localctx, 10, RULE_decl);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
			case T__5:
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				variableDecl();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				globalVariableDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Type() { return GetToken(ProgramParser.Type, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id() { return GetToken(ProgramParser.Id, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Num() { return GetToken(ProgramParser.Num, 0); }
		public FuncDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterFuncDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitFuncDecl(this);
		}
	}

	[RuleVersion(0)]
	public FuncDeclContext funcDecl() {
		FuncDeclContext _localctx = new FuncDeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_funcDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(T__1);
			State = 82;
			Match(T__2);
			State = 83;
			Match(Type);
			State = 84;
			Match(T__2);
			State = 85;
			Match(Id);
			State = 86;
			Match(T__2);
			State = 87;
			Match(Num);
			State = 88;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalVariableDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Type() { return GetToken(ProgramParser.Type, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Num() { return GetToken(ProgramParser.Num, 0); }
		public GlobalVariableDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalVariableDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterGlobalVariableDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitGlobalVariableDecl(this);
		}
	}

	[RuleVersion(0)]
	public GlobalVariableDeclContext globalVariableDecl() {
		GlobalVariableDeclContext _localctx = new GlobalVariableDeclContext(Context, State);
		EnterRule(_localctx, 14, RULE_globalVariableDecl);
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				Match(T__3);
				State = 91;
				Match(T__2);
				State = 92;
				Match(Type);
				State = 93;
				Match(T__2);
				State = 94;
				variable();
				State = 95;
				Match(T__2);
				State = 96;
				Match(T__2);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				Match(T__3);
				State = 99;
				Match(T__2);
				State = 100;
				Match(Type);
				State = 101;
				Match(T__2);
				State = 102;
				variable();
				State = 103;
				Match(T__2);
				State = 104;
				Match(Num);
				State = 105;
				Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Type() { return GetToken(ProgramParser.Type, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Num() { return GetToken(ProgramParser.Num, 0); }
		public VariableDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterVariableDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitVariableDecl(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclContext variableDecl() {
		VariableDeclContext _localctx = new VariableDeclContext(Context, State);
		EnterRule(_localctx, 16, RULE_variableDecl);
		try {
			State = 143;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109;
				Match(T__4);
				State = 110;
				Match(T__2);
				State = 111;
				Match(Type);
				State = 112;
				Match(T__2);
				State = 113;
				variable();
				State = 114;
				Match(T__2);
				State = 115;
				Match(T__2);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117;
				Match(T__5);
				State = 118;
				Match(T__2);
				State = 119;
				Match(Type);
				State = 120;
				Match(T__2);
				State = 121;
				variable();
				State = 122;
				Match(T__2);
				State = 123;
				Match(Num);
				State = 124;
				Match(T__2);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 126;
				Match(T__6);
				State = 127;
				Match(T__2);
				State = 128;
				Match(Type);
				State = 129;
				Match(T__2);
				State = 130;
				variable();
				State = 131;
				Match(T__2);
				State = 132;
				Match(Num);
				State = 133;
				Match(T__2);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 135;
				Match(T__6);
				State = 136;
				Match(T__2);
				State = 137;
				Match(Type);
				State = 138;
				Match(T__2);
				State = 139;
				variable();
				State = 140;
				Match(T__2);
				State = 141;
				Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncTailContext : ParserRuleContext {
		public FuncTailContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcTail; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterFuncTail(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitFuncTail(this);
		}
	}

	[RuleVersion(0)]
	public FuncTailContext funcTail() {
		FuncTailContext _localctx = new FuncTailContext(Context, State);
		EnterRule(_localctx, 18, RULE_funcTail);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			Match(T__7);
			State = 146;
			Match(T__2);
			State = 147;
			Match(T__2);
			State = 148;
			Match(T__2);
			State = 149;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncHeadContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Type() { return GetToken(ProgramParser.Type, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Id() { return GetToken(ProgramParser.Id, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Num() { return GetToken(ProgramParser.Num, 0); }
		public FuncHeadContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcHead; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterFuncHead(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitFuncHead(this);
		}
	}

	[RuleVersion(0)]
	public FuncHeadContext funcHead() {
		FuncHeadContext _localctx = new FuncHeadContext(Context, State);
		EnterRule(_localctx, 20, RULE_funcHead);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151;
			Match(T__8);
			State = 152;
			Match(T__2);
			State = 153;
			Match(Type);
			State = 154;
			Match(T__2);
			State = 155;
			Match(Id);
			State = 156;
			Match(T__2);
			State = 157;
			Match(Num);
			State = 158;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncHeadContext funcHead() {
			return GetRuleContext<FuncHeadContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncTailContext funcTail() {
			return GetRuleContext<FuncTailContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterFuncDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitFuncDef(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefContext funcDef() {
		FuncDefContext _localctx = new FuncDefContext(Context, State);
		EnterRule(_localctx, 22, RULE_funcDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160;
			funcHead();
			State = 164;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << InlineLabel) | (1L << UnaryOp) | (1L << BinaryOp))) != 0)) {
				{
				{
				State = 161;
				stmt();
				}
				}
				State = 166;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 167;
			funcTail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuaternaryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnaryContext unary() {
			return GetRuleContext<UnaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BinaryContext binary() {
			return GetRuleContext<BinaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReturnContext @return() {
			return GetRuleContext<ReturnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JumpEqualContext jumpEqual() {
			return GetRuleContext<JumpEqualContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JumpContext jump() {
			return GetRuleContext<JumpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallContext call() {
			return GetRuleContext<CallContext>(0);
		}
		public QuaternaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quaternary; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.EnterQuaternary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IProgramListener typedListener = listener as IProgramListener;
			if (typedListener != null) typedListener.ExitQuaternary(this);
		}
	}

	[RuleVersion(0)]
	public QuaternaryContext quaternary() {
		QuaternaryContext _localctx = new QuaternaryContext(Context, State);
		EnterRule(_localctx, 24, RULE_quaternary);
		try {
			State = 176;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case UnaryOp:
				EnterOuterAlt(_localctx, 1);
				{
				State = 169;
				unary();
				}
				break;
			case BinaryOp:
				EnterOuterAlt(_localctx, 2);
				{
				State = 170;
				binary();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 171;
				@return();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 4);
				{
				State = 172;
				jumpEqual();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 5);
				{
				State = 173;
				jump();
				}
				break;
			case T__14:
				EnterOuterAlt(_localctx, 6);
				{
				State = 174;
				end();
				}
				break;
			case T__12:
			case T__13:
				EnterOuterAlt(_localctx, 7);
				{
				State = 175;
				call();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
